--- a/estilo.css
+++ b/estilo.css
@@ -29,6 +29,14 @@ h1{
 
 }
 
+.titulo-salas {
+  font-size: 20px; /* ajuste conforme quiser */
+  background: linear-gradient(to right, rgb(53, 18, 101), #4c1797);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
+
 .cor{
     background-color: var(--segunda-cor);
     display: flex;
@@ -59,6 +67,10 @@ h1{
     flex-direction: column;
     align-items: center;
     
+}
+
+p{
+  margin: 10px;
 }
 .paragrafo-titulo{
     color: var(--quarta-cor);
